<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/moedas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#9C3C3C"
                android:backgroundTint="#120808"
                android:fontFamily="@font/aladin"
                android:text="@string/calculadora_de_moedas"
                android:textColor="#FF0000"
                android:textSize="48sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.709"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_o_valor_a_ser_dado_troco"
            android:inputType="numberDecimal"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMais5"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="250dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/mais"
            app:layout_constraintBottom_toTopOf="@+id/fabMais10"
            app:layout_constraintEnd_toStartOf="@+id/cinco5Cents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMais10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="58dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/mais"
            app:layout_constraintBottom_toTopOf="@+id/fabMais25"
            app:layout_constraintEnd_toStartOf="@+id/dez10Cents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabMais5"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMais25"
            android:layout_width="42dp"
            android:layout_height="0dp"
            android:layout_marginStart="58dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/mais"
            app:layout_constraintBottom_toTopOf="@+id/fabMais50"
            app:layout_constraintEnd_toStartOf="@+id/vintecinco25Cents"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabMais10"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMais50"
            android:layout_width="42dp"
            android:layout_height="0dp"
            android:layout_marginStart="58dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/mais"
            app:layout_constraintBottom_toTopOf="@+id/fabMais1Real"
            app:layout_constraintEnd_toStartOf="@+id/cinquenta50Centavos"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabMais25"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMais1Real"
            android:layout_width="43dp"
            android:layout_height="0dp"
            android:layout_marginStart="58dp"

            android:contentDescription="@string/app_name"
            app:icon="@drawable/mais"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/umReal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fabMais50" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMenos5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/calculadora_de_moedas"
            app:icon="@drawable/menos"
            app:layout_constraintBottom_toTopOf="@+id/fabMenos10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cinco5Cents"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMenos10"
            android:layout_width="42dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/menos"
            app:layout_constraintBottom_toTopOf="@+id/fabMenos25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dez10Cents"
            app:layout_constraintTop_toBottomOf="@+id/fabMenos5"
            app:layout_constraintVertical_bias="0.15" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMenos25"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/menos"
            app:layout_constraintBottom_toTopOf="@+id/fabMenos50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/vintecinco25Cents"
            app:layout_constraintTop_toBottomOf="@+id/fabMenos10" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMenos50"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/menos"
            app:layout_constraintBottom_toTopOf="@+id/fabMenos1Real"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cinquenta50Centavos"
            app:layout_constraintTop_toBottomOf="@+id/fabMenos25" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabMenos1Real"
            android:layout_width="42dp"
            android:layout_height="39dp"
            android:layout_marginEnd="64dp"
            android:contentDescription="@string/app_name"
            app:icon="@drawable/menos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/umReal"
            app:layout_constraintTop_toBottomOf="@+id/fabMenos50" />

        <TextView
            android:id="@+id/umReal"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="48dp"
            android:text="1 Real"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/fabMenos1Real"
            app:layout_constraintStart_toEndOf="@+id/fabMais1Real"
            app:layout_constraintTop_toBottomOf="@+id/qnt50Cents"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/qnt1Real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qnt1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/umReal"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/umReal"
            app:layout_constraintTop_toBottomOf="@+id/umReal" />

        <TextView
            android:id="@+id/cinquenta50Centavos"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="48dp"
            android:text="@string/_50_centavos"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/fabMenos50"
            app:layout_constraintStart_toEndOf="@+id/fabMais50"
            app:layout_constraintTop_toBottomOf="@+id/qnt25Cents" />

        <TextView
            android:id="@+id/qnt50Cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/qnt50"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/cinquenta50Centavos"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="@+id/cinquenta50Centavos"
            app:layout_constraintTop_toTopOf="@+id/cinquenta50Centavos" />

        <TextView
            android:id="@+id/vintecinco25Cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="48dp"
            android:text="@string/_25_centavos"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/cinquenta50Centavos"
            app:layout_constraintEnd_toStartOf="@+id/fabMenos25"
            app:layout_constraintStart_toEndOf="@+id/fabMais25"
            app:layout_constraintTop_toBottomOf="@+id/qnt10Cents"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/qnt25Cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/qnt25"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/vintecinco25Cents"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="@+id/vintecinco25Cents"
            app:layout_constraintTop_toTopOf="@+id/vintecinco25Cents" />

        <TextView
            android:id="@+id/dez10Cents"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="48dp"
            android:text="@string/_10_centavos"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/vintecinco25Cents"
            app:layout_constraintEnd_toStartOf="@+id/fabMenos10"
            app:layout_constraintStart_toEndOf="@+id/fabMais10"
            app:layout_constraintTop_toBottomOf="@+id/qnt5Cents"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/qnt10Cents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/qnt107"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/dez10Cents"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="@+id/dez10Cents"
            app:layout_constraintTop_toTopOf="@+id/dez10Cents" />

        <TextView
            android:id="@+id/cinco5Cents"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="48dp"
            android:text="@string/_5_centavos"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/dez10Cents"
            app:layout_constraintEnd_toStartOf="@+id/fabMenos5"
            app:layout_constraintStart_toEndOf="@+id/fabMais5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/qnt5Cents"
            android:layout_width="25dp"
            android:layout_height="15dp"
            android:layout_marginTop="19dp"
            android:text="@string/qnt5"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/cinco5Cents"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="@+id/cinco5Cents"
            app:layout_constraintTop_toTopOf="@+id/cinco5Cents" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>