<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="5 Cents"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="10 Cents"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/textView14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="25 Cents"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/textView15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="50 Cents"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/textView16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="125dp"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="1 Real "
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="43dp"
                android:layout_height="53dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/qnt5"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="43dp"
                android:layout_height="53dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/qnt10"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toStartOf="@+id/button12"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="43dp"
                android:layout_height="53dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/qnt25"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toStartOf="@+id/button13"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="43dp"
                android:layout_height="53dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/qnt50"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toStartOf="@+id/button11"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="43dp"
                android:layout_height="53dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/qnt1"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toStartOf="@+id/button14"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <Button
                android:id="@+id/button6"
                android:layout_width="176dp"
                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:text="Sacar"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <Button
                android:id="@+id/button11"
                android:layout_width="176dp"
                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:text="Sacar"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button13"
                app:layout_constraintTop_toTopOf="@+id/textView16" />

            <Button
                android:id="@+id/button14"
                android:layout_width="176dp"
                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:text="Sacar"
                app:layout_constraintBottom_toBottomOf="@+id/textView17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button11"
                app:layout_constraintTop_toTopOf="@+id/textView17" />

            <Button
                android:id="@+id/button13"
                android:layout_width="176dp"
                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:text="Sacar"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button12"
                app:layout_constraintTop_toTopOf="@+id/textView15" />

            <Button
                android:id="@+id/button12"
                android:layout_width="176dp"
                android:layout_height="67dp"
                android:layout_marginEnd="8dp"
                android:text="Sacar"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button6"
                app:layout_constraintTop_toTopOf="@+id/textView14" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/moedas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/botaoVoltaSangria"
            android:layout_width="171dp"
            android:layout_height="69dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/teal_700"
            android:drawableTint="#B1AAAA"
            android:text="@string/voltar"
            app:iconTint="#AE2828" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>